Adding missing braces to AXMenuListPopup::DidHide()

Chromium build with GCC, it had -Wmisleading-indentation
warning in ax_menu_list_popup.cc after commit [1].

It looks unintended and we adds missing braces from
previous patch-set.

Also this patch includes clean-up as removing
redundant function calls.

[1] https://chromium-review.googlesource.com/c/chromium/src/+/769674

Bug: 849614
Change-Id: I45051847e116bc055dd8ba954bd9a0730d7188df
Reviewed-on: https://chromium-review.googlesource.com/1090698
Commit-Queue: DongJun Kim <djmix.kim@samsung.com>
Reviewed-by: Katie Dektar <katie@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#566755}
Former-commit-id: a628d4ff6707f89c1b8300a0d9e31eb06de0654c