third_party/blink/renderer/modules/accessibility/ax_menu_list_popup.cc
@@ -148,11 +148,13 @@ void AXMenuListPopup::DidUpdateActiveOption(int option_index,
 
 void AXMenuListPopup::DidHide() {
   AXObjectCacheImpl& cache = AXObjectCache();
+  AXObject* descendant = ActiveDescendant();
   cache.PostNotification(this, AXObjectCacheImpl::kAXHide);
-  if (ActiveDescendant())
+  if (descendant) {
     cache.PostNotification(this, AXObjectCacheImpl::kAXChildrenChanged);
-    cache.PostNotification(ActiveDescendant(),
+    cache.PostNotification(descendant,
                            AXObjectCacheImpl::kAXMenuListItemUnselected);
+  }
 }
 
 void AXMenuListPopup::DidShow() {
